--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Christian Artists</title>
+  <title>Archon's Favorite Artists</title>
   <style>
     /* Basic styling for the website */
     body {
@@ -23,6 +23,10 @@
       text-align: center;
     }
 
+    header h1 {
+      color: white;
+    }
+
     main {
       padding: 20px;
     }
@@ -39,6 +43,24 @@
       color: #4CAF50;
     }
 
+    .vote-button {
+      background-color: #4CAF50;
+      color: white;
+      border: none;
+      padding: 10px 15px;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+
+    .vote-button:hover {
+      background-color: #45a049;
+    }
+
+    .votes {
+      font-weight: bold;
+      color: #333;
+    }
+
     footer {
       text-align: center;
       padding: 10px;
@@ -52,33 +74,61 @@
   <!-- Header Section -->
   <header>
     <h1>Archon's Favorite Artists</h1>
-    <p>Learn about Chris Tomlin, Jeremy Camp, and Phil Wickham</p>
+    <p>Vote for your favorite artist below!</p>
   </header>
 
   <!-- Main Content -->
   <main>
-    <!-- Chris Tomlin Section -->
-    <section>
-      <h2>Chris Tomlin</h2>
-      <p>Chris Tomlin is one of the most well-known Christian artists in the world. He has written and performed many worship songs that are sung in churches everywhere. Some of his most popular songs include "How Great Is Our God," "Good Good Father," and "Our God."</p>
-    </section>
-
-    <!-- Jeremy Camp Section -->
-    <section>
-      <h2>Jeremy Camp</h2>
-      <p>Jeremy Camp is a Christian singer and songwriter who has inspired millions with his music. His songs often reflect his personal journey of faith and hope. Popular songs by Jeremy Camp include "I Still Believe," "Walk by Faith," and "There Will Be a Day."</p>
-    </section>
-
-    <!-- Phil Wickham Section -->
-    <section>
-      <h2>Phil Wickham</h2>
-      <p>Phil Wickham is a worship leader and songwriter known for his powerful voice and heartfelt lyrics. His music encourages people to connect with God. Some of his well-loved songs are "Living Hope," "This Is Amazing Grace," and "Battle Belongs."</p>
-    </section>
+    <!-- Artist List -->
+    <div id="artist-list">
+      <!-- Artists will be dynamically added here -->
+    </div>
   </main>
 
   <!-- Footer Section -->
   <footer>
-    <p>&copy; 2023 Christian Artists Website</p>
+    <p>&copy; 2023 Archon's Favorite Artists</p>
   </footer>
+
+  <script>
+    // JavaScript to handle voting and sorting
+
+    // Artist data
+    const artists = [
+      { name: "Chris Tomlin", description: "Chris Tomlin is one of the most well-known Christian artists in the world. He has written and performed many worship songs that are sung in churches everywhere. Some of his most popular songs include 'How Great Is Our God,' 'Good Good Father,' and 'Our God.'", votes: 0 },
+      { name: "Jeremy Camp", description: "Jeremy Camp is a Christian singer and songwriter who has inspired millions with his music. His songs often reflect his personal journey of faith and hope. Popular songs by Jeremy Camp include 'I Still Believe,' 'Walk by Faith,' and 'There Will Be a Day.'", votes: 0 },
+      { name: "Phil Wickham", description: "Phil Wickham is a worship leader and songwriter known for his powerful voice and heartfelt lyrics. His music encourages people to connect with God. Some of his well-loved songs are 'Living Hope,' 'This Is Amazing Grace,' and 'Battle Belongs.'", votes: 0 }
+    ];
+
+    // Function to render the artist list
+    function renderArtists() {
+      const artistList = document.getElementById("artist-list");
+      artistList.innerHTML = ""; // Clear the current list
+
+      // Sort artists by votes in descending order
+      artists.sort((a, b) => b.votes - a.votes);
+
+      // Create a section for each artist
+      artists.forEach((artist, index) => {
+        const section = document.createElement("section");
+        section.innerHTML = `
+          <h2>${artist.name}</h2>
+          <p>${artist.description}</p>
+          <p class="votes">Votes: ${artist.votes}</p>
+          <button class="vote-button" onclick="vote(${index})">Vote</button>
+        `;
+        artistList.appendChild(section);
+      });
+    }
+
+    // Function to handle voting
+    function vote(index) {
+      artists[index].votes++; // Increment the vote count for the selected artist
+      renderArtists(); // Re-render the artist list
+    }
+
+    // Initial render
+    renderArtists();
+  </script>
 </body>
 </html>
